[package]
name = "kube-objstore"
version = "0.1.0"
edition = "2024"
description = "A reusable object store client library for Kubernetes operators"
license = "MIT"
 
[lib]
name = "kube_objstore"
path = "src/lib.rs"
 
[dependencies]
anyhow = "1"
thiserror = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
object_store = { version = "0.11", features = ["aws", "azure"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
 
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
